--- a/public/app.html
+++ b/public/app.html
@@ -2,6 +2,4 @@
     <meta charset="utf-8">
 
     <app-component></app-component>
-
-    <script src="polyfills.js"></script>
-    <script src="app.js"></script>
+<script type="text/javascript" src="vendors.js"></script><script type="text/javascript" src="commons.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="app.js"></script>
