--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,4 @@
     <meta charset="utf-8">
 
     <login-component></login-component>
-
-    <script src="polyfills.js"></script>
-    <script src="login.js"></script>
+<script type="text/javascript" src="vendors.js"></script><script type="text/javascript" src="commons.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="login.js"></script>
