--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
     <meta charset="utf-8">
+    <base href="/">
 
-    <login-component></login-component>
+    <main-component></main-component>
 
     <script src="polyfills.js"></script>
-    <script src="login.js"></script>
+    <script src="app.js"></script>
