Finish solution with mono app

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,6 @@
 
     <main-component></main-component>
 
-    <script src="polyfills.js"></script>
+    <script src="vendors.js"></script>
+    <script src="commons.js"></script>
     <script src="app.js"></script>
